@@ -1,3 +1,9 @@
+2012-05-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* configure.ac, util/benchmark.pl: Merge curses, ncurses and pdcurses targets
+  - appropriate curses library is now autodetected or selected explicitely by
+  --with-gui configure option.
+
+
 2012-05-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * devices.c, ide_internal.h, input.c, log.c, pbi_scsi.c, sio.c, ui.c, util.h,
   dos/dos_ints.h: Fix some GCC warnings.
